--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "jszip": "^3.10.1", 
+    "jszip": "^3.10.1",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
-    "reactflow": "^11.10.4"
+    "reactflow": "^11.10.4",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@types/jszip": "^3.1.6",
